[package]
name = "bool_traits"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.0"
documentation = "https://docs.rs/typenum"
categories = ["no-std", "no-std::no-alloc"]
keywords = ["trait", "bounds", "generics", "boolean", "expression"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
